2008-03-30  Philippe Brochard  <hocwp@free.fr>

	* src/clfswm-internal.lisp (place-frame): Place frame from real (pixel) coordinates.

	* src/config.lisp (*create-frame-on-root*): New variable: Create a new frame on the
	root window only if true.

	* src/clfswm-util.lisp (mouse-click-to-focus-generic): Create a new frame on the
	root window only if *create-frame-on-root* is true.

	* src/bindings-second-mode.lisp (sm-mouse-click-to-focus-generic): Create a new frame
	on the root window.

2008-03-29  Philippe Brochard  <hocwp@free.fr>

	* src/bindings-second-mode.lisp (sm-mouse-click-to-focus-generic): Focus, move and resize
	the current child (even if it's a window).

2008-03-28  Philippe Brochard  <hocwp@free.fr>

	* src/clfswm-util.lisp (mouse-click-to-focus-and-move)
	(mouse-click-to-focus-and-resize): New functions.

	* src/clfswm-internal.lisp (*-fl->px): Convert float coordinates to pixel.
	(*-px->fl): Convert pixel coordinates to float.

	* src/tools.lisp (call-hook): Move call-hook to tools.lisp.

2008-03-27  Philippe Brochard  <hocwp@free.fr>

	* src/clfswm-layout.lisp (no-layout): Use :first-only to raise only the
	first child.

	* src/clfswm-internal.lisp (hide-all): Split hide-all-children in hide-all 
	and hide-all-children.
	(raise-if-needed): New function.
	(show-child): Use a first-p parameter to raise windows only when they are
	first child.

2008-03-26  Philippe Brochard  <hocwp@free.fr>

	* src/clfswm-internal.lisp (select-next/previous-level): Don't use show-all-children 
	-> less flickering.

2008-03-25  Philippe Brochard  <hocwp@free.fr>

	* src/clfswm-info.lisp (keys-from-list): new function.

	* src/*: rename 'childs' in 'children'.

	* src/*: rename 'group' in 'frame'.

2008-03-22  Philippe Brochard  <hocwp@free.fr>

	* src/clfswm-pack.lisp (explode-group/explode-current-group): new functions.

2008-03-21  Philippe Brochard  <hocwp@free.fr>

	* src/clfswm-pack.lisp: Pack, Fill, Resize functions.
