@@ -8,9 +8,6 @@ URGENT PROBLEMS
 Should handle these soon.
 
 Rewrote all useful code present in 0801 version.
-
-- mouse operations: A beginnig is done. Now in second mode: focus child+ resize/move window's father [Philippe]
-
 - Hide a window when its size is less than hint minimal size. [Philippe]
 - Bind alt+1/2/3/4... to a particular child: [Philippe]
    If bind exist -> focus this child
@@ -32,6 +29,8 @@ Rewrote all useful code present in 0801 version.
 - get-frame-by-name (path)  [Philippe]
   get-frame-by-name (path): return the frame that its own frame has this name if it exists such a frame
   get-window-by-name (path): return the window that its own frame that its own frame has this name if it exists such a window.
+
+- Adapt frame to window hints
 
 
 MAYBE
